# geoguard

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-hf.yml
benchmarks/: run_benchmark.py  select_events.py
data/: benchmark_65_results.csv  benchmark_samples.xlsx  flood_demo_sacramento.tif
docs/: architecture.md  poster-esa-nasa-workshop-II.md  registered-tools.md  tools-explained.md
geoguard/: __init__.py  claims.py  config.py  metadata.py  pipeline.py  processors.py  rubrics.py  schemas.py  utils.py  verifications.py
geoguard/adapters/: __init__.py  tiff.py
geoguard/tools/: __init__.py  geospatial.py  registry.py  satellite.py  selector.py  weather.py
notebooks/: geoguard-e2e.py
scripts/: run_benchmark.py  select_events.py
