[project]
name = "geoguard"
version = "0.1.0"
description = "Pluggable guardrail framework for geospatial AI."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "loguru>=0.7.3",
    "marimo>=0.23.5",
    "pydantic-ai>=1.93.0",
    "pydantic-settings>=2.14.1",
    "rasterio>=1.5.0",
    "scipy>=1.13",
    "tifffile>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.23.5",
    "pre-commit>=4.0.1",
]

[tool.ruff]
exclude = ["notebooks/"]
